--- a/style.css
+++ b/style.css
@@ -1,6 +1,4 @@
 * {
-  width: 100%
-  height: 100%
   font-family: monospace, cursive;
   display: warp;
   margin: 0;
@@ -24,7 +22,7 @@ p, h1{
   display: block;
   margin: 0;
   padding: 0;
-  width:100%;
+  width: 100wh;
   height: 100vh;
   border: 1px solid black;
   background-image: url("background.jpeg");
@@ -34,10 +32,10 @@ p, h1{
 }
 
 #img {
-  width: 170px;
-  height: 170px;
+  width: 200px;
+  height: 200px;
   position: absolute;
-  top: 14%;
+  top: 18%;
   left: 5%;
   border: 1px solid black;
   box-shadow: 0,0, 10px black;
@@ -46,50 +44,49 @@ p, h1{
 #para1 {
   background-color: rgba(0, 0, 0, 0.3);
   position: absolute;
-  top: 25%;
-  left: 50%;
-  font-size: 15px;
-}
-#para2 {
-  background-color: rgba(0, 0, 0, 0.3);
-  position: absolute;
   top: 45%;
-  left: 50%;
+  left: 30%;
+  right: 30%;
   font-size: 15px;
+  box: shadow 0,0, 10px black;
+  border-radius: 5px;
+  border: 1px solid black;
+  min-width: 200px; 
 }
+
 .btn1 {
   position: absolute;
-  top: 75%;
-  left: 45%;
+  top: 95%;
+  left: 35%;
   font-size: 15px;
-  background-color: whitesmoke;
+  background-color: #0B60B0;
   border: 1px solid #000000;
   border-radius: 10px;
   padding: 2px;
   width: 100px;
   heigth: 50px;
   text-align: center;
+  color: black;
+  text-decoration: none;
 }
 .btn2 {
   position: absolute;
-  top: 75%;
-  left: 70%;
+  top: 95%;
+  left: 60%;
   font-size: 15px;
-  background-color: whitesmoke;
+  background-color: #0B60B0;
   border: 1px solid #000000;
   border-radius: 10px;
   padding: 2px;
   width: 100px;
   heigth: 50px;
   text-align: center;
+  color: black;
+  text-decoration: none;
 }
 a {
-  color: aliceblue;
+  text-decoration: none;
 }
 a:hover {
-  color: black;
-  background-color: whitesmoke;
-}
-a:visited {
-  color: black;
+  background-color: black;
 }
